NHB guidelines: shortened title to less than 100 characters

--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -1,5 +1,5 @@
 ---
-title             : "When easy is not preferred: The Cognitive and Emotion Regulation Effort Discounting paradigm (CERED) for estimating subjective values of cognitive tasks"
+title             : "When easy is not preferred: An effort discounting paradigm for estimating subjective values of tasks"
 shorttitle        : "The CERED paradigm for estimating subjective values"
 author: 
   - name          : "Josephine Zerna"
